2005-02-02  Albert Chu  <chu11@llnl.gov>

	* cerebro.spec.in: Fix rpm build problem.
	
2005-02-01  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_config.h, src/cerebrod/cerebrod_config.c:
	Support listen_on_network_interface configuration and
	configuration calculation.  Fix configuration check corner cases.

	* src/cerebrod/cerebrod_listener.c: Continue work on listener.
	
2005-01-31  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_config.h, src/cerebrod/cerebrod_config.c,
	src/cerebrod/cerebrod_speaker.c: Globally renamed speak_to_ip and
	speak_to_port to heartbeat_destination_ip and
	heartbeat_destination_port.  Removed listen_port configuration.
	Globally renamed speak_from_port to heartbeat_source_port.

	* src/cerebrod/cerebrod_config.h, src/cerebrod/cerebrod_config.c:
	Begin listen_on_network_interface configuration option addition.
	
2005-01-23  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_listener.c: Begin work on cerebrod_listener

	* src/cerebrod/wrappers.h, src/cerebrod/wrappers.c (List_create,
	wrap_list_create, Hash_create, wrap_hash_create): New macros and
	functions.

	* src/cerebrod/cerebrod_config.h, src/cerebrod/cerebrod_config.c
	(_cerebrod_config_default, _cerebrod_config_parse),
	src/cerebrod/cerebrod_speaker.c
	(_cerebrod_speaker_create_and_setup_socket): Add and use
	speak_to_port configuration option.
	
2005-01-22  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_speaker.c (cerebrod_speaker): Fix corner
	case for errno survival on writes and sleep_time.  Cleaned up
	code.

	* src/cerebrod/cerebrod_speaker.c
	(_cerebrod_speaker_create_and_setup_socket): Fix errno check
	corner case.

	* src/libcommon/hash.h, src/libcommon/hash.c,
	src/libcommon/list.h, src/libcommon/list.c,
	src/libcommon/thread.h, src/libcommon/thread.c: New files.

	* src/libcommon/Makefile.am: Update for new files.

	* src/cerebrod/cerebrod_listener.h,
	src/cerebrod/cerebrod_listener.c: New files.
