@@ -1,3 +1,12 @@
+2005-02-03  Albert Chu  <chu11@llnl.gov>
+
+	* src/cerebrod/cerebrod_config.h, src/cerebrod_config.c: Renamed
+	speak_ttl to heartbeat_ttl and merged two network interface
+	configurations into one.
+
+	* src/cerebrod/cerebrod_speaker.c,
+	src/cerebrod/cerebrod_listener.c: Adjust to configuration changes.
+	
 2005-02-02  Albert Chu  <chu11@llnl.gov>
 
 	* cerebro.spec.in: Fix rpm build problem.
